	syntax = "proto3";
	import "google/protobuf/empty.proto";
	
	option java_multiple_files = true;
	option java_package = "sw.Monitoring.service3";
	option java_outer_classname = "MonitorImpl";
	
	package service3;
	
	/// Monitoring service
	service Monitoring {
	  // Saves user credentials for accessing health records (Unary)
	  rpc SetUserRecords(UserRecords) returns (ServerResponse) {}
	
	  // Requests health records (Unary)
	  rpc GetHealthRecords(GetHealthRecordsRequest) returns (GetHealthRecordsResponse) {}
	
	  // Sends heart rate data from client and receives warnings from server (Bidirectional Streaming)
	  rpc MonitorHeartRate(stream HeartRateRequest) returns (stream HeartRateWarning) {}
	}
	
	// Monitoring request and response messages
	message UserRecords {
		int32 patient_id = 1;
		int32 age = 2;
		string name = 3;
		double weight = 4;
		double height = 5;
		string address = 6;
		repeated EmergencyContact Contacts = 7; //could be more than one emergency contact
	}
	
	message EmergencyContact {
	  string name = 1;
	  string phone = 2;
	}
		
	message ServerResponse {
		string confirmed = 1;
	}
	
	message GetHealthRecordsRequest {
		PatientID patient_id = 1;
	}
	
	message GetHealthRecordsResponse {
    	UserRecords user_records = 1;
	}
	
	message PatientID{
		int32 patient_id = 1;
	}
	
	message HeartRateRequest {
	  double heart_rate = 1;
	  PatientID patient_id = 2;
	}
	
	message HeartRateWarning {
	  string message = 1;
	}
